# m-flask

./: README.md  app.py  pyproject.toml
templates/: welcome.html.j2
