[tool.poetry]
name = "m-flask"
version = "0.1.0"
description = "Micro flask project template"
authors = ["dj-mc <49037253+dj-mc@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
rope = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
